# QICFasta

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
lib/: fse.h  fseU16.h  fse_compress.c
qic/: main.c
